<resources>
    <string name="app_name">Family Board</string>
    <string name="title_activity_board">BoardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="list_tab">Families</string>
    <string name="chat_tab">Board</string>
    <string name="profile_tab">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_input_hint">What do you need ?</string>
    <string name="text_input_send">Send</string>
    <string name="btn_send">send</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter email</string>
    <string name="repeat_password">Repeat password</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register here</string>
    <string name="put_on_board">Put on board</string>
    <string name="pets">Pets</string>
    <string name="until_when">Until when?</string>
    <string name="what_to_do_pets">What to do?</string>
    <string name="what_event">What is the event?</string>

    <string name="who_pets">Who?</string>
    <string name="enter_family_name_or_code">Enter family name or code</string>
    <string name="no_families_to_display">No families to display</string>

    <!-- Family List -->
    <string name="family_add_message">Adding family</string>
    <string name="family_member_add_message">Adding you to family</string>

    <!--Errors -->
    <string name="family_add_unable">Unable to add new family at the moment.</string>
    <string name="family_add_aborted">Adding of new family was canceled.</string>
    <string name="family_add_already_exists">That family name already exists, try another one</string>
    <string name="family_add_generic">Problem while adding family</string>

    <string name="family_member_add_unable">Unable to add member to family at the moment.</string>
    <string name="family_member_add_aborted">Adding of member to family was canceled.</string>
    <string name="family_member_already_in_family">You are already a member of this family!</string>
    <string name="family_member_add_generic">Problem while adding family member</string>
    <string name="family_name_key">FAMILY_NAME</string>
    <string name="family_shared_prefs">FAMILY_SHARED_PREFS</string>
    <string name="when_to_do_it_pets">When to do it?</string>
    <string name="when_event">When is the event?</string>
    <string name="message_content_what">What to do</string>
    <string name="message_content_when">When to do it</string>
    <string name="category_pets">pets</string>

    <string name="hour_minute_format">%02d:%02d</string>
    <string name="message_accept_text">Accepted by %1$s</string>
    <string name="message_display_not_accepted">Nobody has accepted this task</string>
    <string name="event_input_title">Events</string>
    <string name="store_input_title">Store</string>
    <string name="zero_text">0</string>
    <string name="create_new_family">Create new family</string>
    <string name="main_board_no_message">No messages to display. Add some!</string>
    <string name="action_aborted_error">Action aborted. Try again.</string>
    <string name="category_event">event</string>
    <string name="category_store">store</string>
    <string name="default_notification_channel_id">FCM_Default</string>


</resources>
