<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".main_board.input.event.EventFragment">

    <include
        android:id="@+id/event_input_progress_bar"
        layout="@layout/progress_bar" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/event_title"
            style="@style/TextAppearance.AppTheme.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/event_input_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/event_what_input"
            style="@style/InputEditTextStyle"
            android:hint="@string/what_event"
            android:inputType="textShortMessage"
            app:layout_constraintStart_toStartOf="@+id/event_title"
            app:layout_constraintTop_toBottomOf="@id/event_title" />

        <EditText
            android:id="@+id/event_when_input"
            style="@style/InputEditTextStyle"
            android:hint="@string/when_event"
            app:layout_constraintStart_toStartOf="@+id/event_what_input"
            app:layout_constraintTop_toBottomOf="@+id/event_what_input" />

        <Button
            android:id="@+id/submit_button"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:text="@string/put_on_board"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>