<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_padding">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:background="@drawable/rounded_background_primary_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:id="@+id/ic_email"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="@dimen/padding_small"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_email"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/email_input"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:hint="@string/enter_email"
            style="@style/EditTextAuth"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="5"
            app:layout_constraintStart_toEndOf="@+id/ic_email"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginRight="@dimen/default_margin"
        android:background="@drawable/rounded_background_primary_color"
        app:layout_constraintEnd_toEndOf="@+id/email_field"
        app:layout_constraintStart_toStartOf="@+id/email_field"
        app:layout_constraintTop_toBottomOf="@id/email_field">

        <ImageView
            android:id="@+id/ic_password"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="@dimen/padding_small"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_lock_outline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/password_input"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:hint="@string/enter_password"
            style="@style/EditTextAuth"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="5"
            app:layout_constraintStart_toEndOf="@+id/ic_password"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/sign_in_button"
        style="@style/DefaultButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="@+id/password_field"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/password_field"

        app:layout_constraintTop_toBottomOf="@+id/password_field" />


</androidx.constraintlayout.widget.ConstraintLayout>